fixing image caption size from overflowing text

--- a/modules/custom/cu_shortcodes/scss/cu_shortcodes.scss
+++ b/modules/custom/cu_shortcodes/scss/cu_shortcodes.scss
@@ -431,12 +431,28 @@ a.expand-title:focus {
     margin-left: 20px;
     max-width:50%;
     width:240px;
+    img {
+      display: block;
+      float: none;
+      width: 100%;
+      height: auto;
+      max-width: 100%;
+      margin-bottom: 0px;
+    }
   }
   .image-caption-left {
     float: left;
     margin-right: 20px;
     max-width:50%;
     width:240px;
+    img {
+      display: block;
+      float: none;
+      width: 100%;
+      height: auto;
+      max-width: 100%;
+      margin-bottom: 0px;
+    }
   }
 }
 .image-caption p {
@@ -448,9 +464,6 @@ a.expand-title:focus {
   //background: #f0f0f0;
   margin: 0;
 }
-div.image-caption img {
-  display: block;
-}
 div.image-caption  p:first-child {
   display: block;
   margin: 0 !important;
@@ -461,12 +474,7 @@ div.image-caption  p:first-child {
 }
 
 .image-caption img {
-  display: block;
   float: none;
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  margin-bottom: 0px;
 }
 
 /* Callout shortcode CSS */
